# llmania

./: .gitignore  .pyre_configuration  AGENTS.md  README.md  ai_benchmark.py  ai_final_win_log.txt  ai_log.txt  ai_win_log.txt  benchmark.py  crash_seeds.txt  manual_attack_test.py  pyproject.toml  timeout_seeds.txt
docs/: architecture.md  contributing.md  future_features.md
src/: ai_logic.py  command_processor.py  debug_manager.py  equipment.py  equippable.py  fog_of_war.py  game_engine.py  game_manager.py  game_state.py  input_handler.py  input_mode.py  inventory.py  inventory_manager.py  item.py  item_factory.py  main.py  message_log.py  monster.py  monster_factory.py  parser.py  player.py  renderer.py  tile.py  world_generator.py  world_map.py
src/actions/: move.py
src/ai_brain/: ai_brain.py  data_structures.py  evaluator.py  explorer.py  target_finder.py
src/ai_logic/: __init__.py  ai_monster_view.py  ai_player_view.py  bestiary.py  context.py  explorer.py  main.py  states.py  target_finder.py  utility_calculator.py
src/commands/: __init__.py  attack_command.py  base_command.py  drop_command.py  inventory_command.py  look_command.py  move_command.py  quit_command.py  take_command.py  use_command.py
src/data/: items.json  monsters.json
src/effects/: __init__.py  base_effect.py  damage_effect.py  healing_effect.py  invisibility_effect.py  stat_buff_effect.py  teleport_effect.py
src/items/: __init__.py  consumable_item.py  container_item.py  equippable.py  item.py  quest_item.py  readable_item.py
src/map_algorithms/: __init__.py  connectivity.py  density.py  line_of_sight.py  pathfinding.py
src/map_builders/: __init__.py  builder_base.py  single_floor_builder.py  world_builder.py
src/monster_ai/: main.py
tests/: test_ai_logic.py  test_command_processor.py  test_effects.py  test_equipment.py  test_factories.py  test_game_engine.py  test_game_engine_items.py  test_input_handler.py  test_inventory.py  test_item.py  test_message_log.py  test_monster.py  test_monster_movement.py  test_parser.py  test_player.py  test_renderer.py  test_tile.py  test_world_generator.py  test_world_map.py
tests/ai_logic/: test_context.py  test_utility_calculator.py
tests/commands/: __init__.py  test_attack_command.py  test_inventory_command.py  test_move_command.py  (+1 more)
(+50 files in other folders)
