[project]
name = "LLMania"
version = "0.1.0"
description = "A terminal-based roguelike adventure game."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.8"
dependencies = [
    "windows-curses; sys_platform == 'win32'"
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.uv]
# uv configuration (if any specific needed in the future)

[tool.ruff]
# ruff configuration will be added in a later step
lint.select = ["E", "F", "I"] # Enable basic linting rules (pyflakes, pycodestyle, isort)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

